@@ -1,6 +1,7 @@
 21 June 2007: Wouter
 	- Fixup secondary buffer in case of error callback.
 	- cleanup slumber list of runnable states.
+	- module_subreq_depth fails to work in slumber list.
 
 20 June 2007: Wouter
 	- new -C option to enable coredumps after forking away.
